--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,12 @@ on:
 
 jobs:
 	build:
-		
 		runs-on: ubuntu-latest
 
 		steps:
-		- uses: actions/checkout@v2
-		- name: setup .NET Core
-		  uses: actions/setup-dotnet@v1.5.0
+			-	uses: actions/checkout@v2
+			-	uses: nelonoel/branch-name@v1
+
 		  with:
 			dotnet-version: '3.1.x'
 			source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
