--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,14 +11,24 @@ jobs:
         steps:
             -   uses: actions/checkout@v2
             -   uses: nelonoel/branch-name@v1
-
+            -   uses: actions/setup-dotnet@v1.5.0
                 with:
-                    dotnet-version: '3.1.x'
+                    dotnet-version: 3.1.301
                     source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
                 env:
                     NUGET_AUTH_TOKEN: '%NUGET_AUTH_TOKEN%'
-
-            -   name: Publish the package to GPR
-                run: dotnet nuget push /cs-ijson-microservice.nupkg
+            
+            -   name: Install dependencies
+                run: dotnet restore
+            -   name: Build
+                run: dotnet build --configuration Release --no-restore
+            -   name: Test
+                run: dotnet test --no-restore --verbosity normal
+            -   name: Pack
+                run: dotnet pack --no-build --configuration Release cs-ijson-microservice.csproj --output .
+            -   name: PushNuget
+                run: dotnet nuget push *.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{secrets.PUBLISH_TO_NUGET_ORG}} --skip-duplicate
+            -   name: PushGithub
+                run: dotnet nuget push *.nupkg --no-symbols --skip-duplicate
                 env:
                     NUGET_AUTH_TOKEN: ${{ github.token }}
