--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
             -   name: Test
                 run: dotnet test --no-restore --verbosity normal
             -   name: Pack
-                run: dotnet pack --no-build --configuration Release cs-ijson-microservice/cs-ijson-microservice.csproj --output .
+                run: dotnet pack --no-build --configuration Release /cs-ijson-microservice.csproj --output .
             -   name: PushGithub
                 run: dotnet nuget push *.nupkg --no-symbols --skip-duplicate
                 env:
