--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,6 @@ jobs:
             -   name: Pack
                 run: dotnet pack --no-build --configuration Release --output .
             -   name: PushGithub
-                run: dotnet nuget push *.nupkg -k ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/kakadu-dev/index.json --no-symbols --skip-duplicate
+                run: dotnet nuget push *.nupkg -k ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/kakadu-dev/cs-ijson-microservice/index.json --no-symbols --skip-duplicate
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
