--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
                 run: dotnet test --no-restore --verbosity normal
             -   name: Pack
                 run: dotnet pack --no-build --configuration Release --output .
+            -   name: Add private GitHub registry to NuGet
+                run: nuget sources add -name "GPR" -Source https://nuget.pkg.github.com/kakadu-dev/index.json -Username kakadu-dev -Password ${{ secrets.GITHUB_TOKEN }}
             -   name: PushGithub
                 run: dotnet nuget push *.nupkg -k ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/kakadu-dev/cs-ijson-microservice/index.json --no-symbols --skip-duplicate
                 env:
