--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
             -   uses: actions/setup-dotnet@v1.5.0
                 with:
                     dotnet-version: 3.1.301
+                    source-url: https://nuget.pkg.github.com/kakadu-dev/cs-ijson-microservice/index.json
+                env:
+                    NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
             -   name: Install dependencies
                 run: dotnet restore
@@ -23,9 +26,5 @@ jobs:
                 run: dotnet test --no-restore --verbosity normal
             -   name: Pack
                 run: dotnet pack --no-build --configuration Release --output .
-            -   name: Add private GitHub registry to NuGet
-                run: nuget sources add -name "cs-ijson-microservice" -Source https://nuget.pkg.github.com/kakadu-dev/index.json -Username kakadu-dev -Password ${{ secrets.GITHUB_TOKEN }}
             -   name: PushGithub
-                run: dotnet nuget push *.nupkg -k ${GITHUB_TOKEN} --source github --no-symbols --skip-duplicate
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                run: dotnet nuget push *.nupkg --skip-duplicate --no-symbols true
