--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
             -   uses: actions/setup-dotnet@v1.5.0
                 with:
                     dotnet-version: 3.1.301
-                    source-url: https://nuget.pkg.github.com/kakadu-dev/cs-ijson-microservice/index.json
+                    source-url: https://nuget.pkg.github.com/kakadu-dev/index.json
                 env:
                     NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
