--- a/cs-ijson-microservice.csproj
+++ b/cs-ijson-microservice.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.0</Version>
+    <OutputType>Library</OutputType>
+    <PackageId>cs-ijson-microservice</PackageId>
+    <RepositoryUrl>https://github.com/kakadu-dev/cs-ijson-microservice</RepositoryUrl>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>cs_ijson_microservice</RootNamespace>
   </PropertyGroup>
