--- a/cs-ijson-microservice.csproj
+++ b/cs-ijson-microservice.csproj
@@ -1,12 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <OutputType>Library</OutputType>
     <PackageId>cs-ijson-microservices</PackageId>
     <RepositoryUrl>https://github.com/kakadu-dev/cs-ijson-microservices</RepositoryUrl>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>cs_ijson_microservice</RootNamespace>
+    <Authors>Vitaly Shcherba</Authors>
+    <Company>Kakadu-dev</Company>
+    <Description>.NET Core Inverted JSON Microservices</Description>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
