--- a/.nuspec
+++ b/.nuspec
@@ -4,12 +4,12 @@
     <id>cs-ijson-microservice</id>
     <version>1.0.0</version>
     <title>
-      NET CORE Inverted JSON Microservices
+      .NET Core Inverted JSON Microservices
     </title>
     <authors>Vitaly Shcherba</authors>
     <owners>kakadu-dev</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Package for create microservice architecture based on c#. </description>
+    <description>Package for create microservice architecture based on .NET Core.</description>
     <repository type="git" url="https://github.com/kakadu-dev/cs-ijson-microservices" />
   </metadata>
   <files>
